Fix database names

--- a/database/migrations/todo.txt
+++ b/database/migrations/todo.txt
@@ -2,9 +2,26 @@ RENAME TABLE laporan__pjs TO laporan_pjs;
 RENAME TABLE jenis__pollings TO jenis_pollings;
 RENAME TABLE laporan__praktikans TO laporan_praktikans;
 RENAME TABLE history__jagas TO history_jagas;
+RENAME TABLE jadwal__jagas TO jadwal_jagas;
+RENAME TABLE jadwal__pikets TO jadwal_pikets;
 RENAME TABLE current__praktikums TO current_praktikums;
 RENAME TABLE jawaban__tps TO jawaban_tps;
+RENAME TABLE jawaban__tas TO jawaban_tas;
+RENAME TABLE jawaban__tks TO jawaban_tks;
+RENAME TABLE jawaban__mandiris TO jawaban_mandiris;
+RENAME TABLE jawaban__fitbs TO jawaban_fitbs;
+RENAME TABLE jawaban__jurnals TO jawaban_jurnals;
+RENAME TABLE kode__pelanggarans TO kode_pelanggarans;
+RENAME TABLE kumpul__tps TO kumpul_tps;
 RENAME TABLE soal__tps TO soal_tps;
+RENAME TABLE soal__tas TO soal_tas;
+RENAME TABLE soal__tks TO soal_tks;
+RENAME TABLE soal__mandiris TO soal_mandiris;
 RENAME TABLE temp__soaljurnals TO temp_soaljurnals;
+RENAME TABLE temp__jawabantps TO temp_jawabantps;
 RENAME TABLE soal__jurnals TO soal_jurnals;
 RENAME TABLE soal__fitbs TO soal_fitbs;
+RENAME TABLE feedback__aslabs TO feedback_aslabs;
+RENAME TABLE foto__asistens TO foto__asistens;
+RENAME TABLE history__izins TO history_izins;
+RENAME TABLE history__pikets TO history_pikets;
